--- a/架构.md
+++ b/架构.md
@@ -1,1 +1,11 @@
+#1 实践干货！猿题库 iOS 客户端架构设计
+http://blog.csdn.net/kaitiren/article/details/50491583
 
+#2 iOS用被误解的MVC重构代码
+http://www.tuicool.com/articles/eQJZba3
+
+#3 Xcode重构功能怎么用我全告诉你
+http://www.cocoachina.com/ios/20160127/15097.html
+
+#4 浅析iOS程序设计模式（基于MVC）
+http://www.cnblogs.com/ygm900/p/3473784.html
