--- a/架构.md
+++ b/架构.md
@@ -9,3 +9,9 @@ http://www.cocoachina.com/ios/20160127/15097.html
 
 #4 浅析iOS程序设计模式（基于MVC）
 http://www.cnblogs.com/ygm900/p/3473784.html
+
+#5 ReactiveCocoa入门教程：第一部分
+http://www.cocoachina.com/ios/20150123/10994.html
+
+#6 这样好用的ReactiveCocoa，根本停不下来
+http://www.cocoachina.com/ios/20150817/13071.html
