--- a/图形设计.MD
+++ b/图形设计.MD
@@ -1,2 +1,5 @@
 #1 给iOS开发者的Sketch入门教程
 http://www.cocoachina.com/ios/20160216/15264.html
+
+#2 用PS制作磨砂效果
+http://zhidao.baidu.com/link?url=dV7Au-pfDIXB5NYLc85n0WQE80qqMTTgC7TlTNm9IH4i9OFGsoPA0CYEL3sJCZKSeoXcTJ7wO1jLKljJrs1W19G276xxhCD21Gcy-5i9x-_
