--- a/面试.MD
+++ b/面试.MD
@@ -1,2 +1,5 @@
 #1 25个 iOS 面试题整理（带答案）
 http://www.cocoachina.com/programmer/20160219/15331.html
+
+#2 单例 小心这个陷阱的陷阱   
+http://www.cocoachina.com/bbs/read.php?tid=459882
