--- a/面试.MD
+++ b/面试.MD
@@ -3,3 +3,12 @@ http://www.cocoachina.com/programmer/20160219/15331.html
 
 #2 单例 小心这个陷阱的陷阱   
 http://www.cocoachina.com/bbs/read.php?tid=459882
+
+#3 小笨狼漫谈多线程：NSThread
+http://www.cocoachina.com/ios/20160225/15421.html
+
+#4 链式编程思想
+http://www.cocoachina.com/ios/20160225/15408.html
+
+#5 [面试/网络] TCP/IP：数据链路层、IP协议以及IP协议相关技术
+http://www.cocoachina.com/programmer/20160225/15363.html
