--- a/面试.MD
+++ b/面试.MD
@@ -12,3 +12,6 @@ http://www.cocoachina.com/ios/20160225/15408.html
 
 #5 [面试/网络] TCP/IP：数据链路层、IP协议以及IP协议相关技术
 http://www.cocoachina.com/programmer/20160225/15363.html
+
+#6 宝库iOS开发笔试题
+http://www.cocoachina.com/ios/20160226/15440.html
