--- a/面试.MD
+++ b/面试.MD
@@ -15,3 +15,12 @@ http://www.cocoachina.com/programmer/20160225/15363.html
 
 #6 宝库iOS开发笔试题
 http://www.cocoachina.com/ios/20160226/15440.html
+
+#40 详细讲述iOS自定义转场
+http://www.cocoachina.com/ios/20151120/14303.html
+
+#41 Grand Central Dispatch 基础教程
+http://www.cocoachina.com/ios/20150609/12072.html
+
+#45 如何让iOS 保持界面流畅？这些技巧你知道吗
+http://www.cocoachina.com/ios/20151130/14477.html
