--- a/图形设计.MD
+++ b/图形设计.MD
@@ -6,3 +6,14 @@ http://zhidao.baidu.com/link?url=dV7Au-pfDIXB5NYLc85n0WQE80qqMTTgC7TlTNm9IH4i9OF
 
 #3 Storyboard的爱与恨
 http://www.cocoachina.com/ios/20160225/15415.html
+
+#4.swift storyboard 1-2
+http://www.cocoachina.com/swift/20150112/10892.html
+http://www.cocoachina.com/swift/20150114/10924.html
+
+#5.swift autolayout 1-2
+http://www.cocoachina.com/swift/20141013/9893.html
+http://www.cocoachina.com/ios/20141014/9908.html
+
+#21 UITableViewCell自适应大小(各种场合下的处理)   
+http://www.cocoachina.com/bbs/read.php?tid=325605
