--- a/面试.MD
+++ b/面试.MD
@@ -24,3 +24,6 @@ http://www.cocoachina.com/ios/20150609/12072.html
 
 #45 如何让iOS 保持界面流畅？这些技巧你知道吗
 http://www.cocoachina.com/ios/20151130/14477.html
+
+#33 深入理解dispatch_queue
+http://www.cocoachina.com/ios/20151117/14225.html
