--- a/面试.MD
+++ b/面试.MD
@@ -27,3 +27,6 @@ http://www.cocoachina.com/ios/20151130/14477.html
 
 #33 深入理解dispatch_queue
 http://www.cocoachina.com/ios/20151117/14225.html
+
+#2016年iOS笔试题   
+http://www.cocoachina.com/bbs/read.php?tid=461221
