--- a/面试.MD
+++ b/面试.MD
@@ -30,3 +30,9 @@ http://www.cocoachina.com/ios/20151117/14225.html
 
 #2016年iOS笔试题   
 http://www.cocoachina.com/bbs/read.php?tid=461221
+
+#iOS面试必看，最全梳理
+http://www.cocoachina.com/ios/20160323/15770.html
+
+#iOS开发调试技巧总结（持续更新中）
+http://www.cocoachina.com/ios/20160321/15726.html
